# Save-n-Bite

./: .coverage  .env  .env.prod  .gitignore  AzuriteConfig  README.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  __azurite_db_table__.json  docker-compose.prod.yml  instructions.md  pyproject.toml  requirements.txt  tailwind.config.js
save-n-bite-backend/: ..gitattributes.swp  .coverage  .gitattributes  .gitignore  =1.15.0  Dockerfile.prod  FINAL_INTEGRATION_TEST_SUMMARY.md  INTEGRATION_TESTS_FINAL_SUMMARY.md  INTEGRATION_TESTS_SUMMARY.md  PER_APP_TEST_ISOLATION.md  Pipfile  blob_storage.py  complete_measurements.py  conftest.py  debug_password_validation.py  integration_test_report_20250927_223730.txt  integration_test_report_20250927_224030.txt  integration_test_report_20250927_224120.txt  integration_test_report_20250927_224137.txt  integration_test_report_20250927_224421.txt  integration_test_report_20250927_224517.txt  integration_test_report_20250928_054858.txt  integration_test_report_20250928_055400.txt  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  run_app_tests.py  run_integration_tests.py  run_quick_tests.py  run_tests_simple.py  test.py  test_per_app_isolation.py  test_settings.py  test_settings_standalone.py
save-n-bite-backend/__blobstorage__/: 40624254-72a4-4ac9-9642-392f668b5b3d  6353814a-0775-4209-adf9-0f153cc5fbe8  a60eedbf-3c81-4f8d-afd7-1572a97c2a7b  fa071fdc-aa8e-49d7-8b02-8bf4f711ecc0
save-n-bite-backend/admin/: apps.py  permissions.py  serializers.py  services.py  utils.py  views.py
save-n-bite-backend/admin_system/: admin.py  apps.py  blob_utils.py  middleware.py  models.py  permissions.py  serializers.py  services.py  signals.py  tests.py  urls.py  utils.py  views.py
save-n-bite-backend/admin_system/migrations/: 0001_initial.py  0002_add_access_log.py  0003_rename_admin_syste_timesta_b82f42_idx_admin_syste_timesta_37fe35_idx_and_more.py
save-n-bite-backend/analytics/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
save-n-bite-backend/analytics/migrations/: 0001_initial.py
save-n-bite-backend/authentication/: admin.py  admin_views.py  apps.py  jwt_auth.py  middleware.py  models.py  serializers.py  tests.py  urls.py  views.py
save-n-bite-backend/authentication/migrations/: 0001_initial.py  0002_user_account_locked_until_user_admin_notes_and_more.py  0002_user_admin_rights_user_phone_number_and_more.py  0003_foodproviderprofile_business_hours_and_more.py  0004_foodproviderprofile_banner_and_more.py  0005_alter_customerprofile_profile_image_and_more.py
save-n-bite-backend/backend/: analyze_modularity.py  apps.py  measure_db_performance.py  settings.py  signals.py  test_coverage_analysis.py  test_error_handling.py  test_settings.py  urls.py
save-n-bite-backend/badges/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
save-n-bite-backend/badges/migrations/: 0001_initial.py
save-n-bite-backend/digital_garden/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
save-n-bite-backend/digital_garden/migrations/: 0001_initial.py  0002_plant_svg_image_url_alter_plant_care_difficulty_and_more.py
save-n-bite-backend/food_listings/: admin.py  admin_views  admin_views.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
save-n-bite-backend/food_listings/migrations/: 0001_initial.py  0002_foodlisting_admin_flagged_and_more.py
save-n-bite-backend/interactions/: admin.py  admin_views  admin_views.py  apps.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
save-n-bite-backend/interactions/migrations/: 0001_initial.py  0002_interaction_motivation_message_and_more.py  0003_checkoutsession_delete_pickupdetails_and_more.py  0004_cart_expires_at_cart_interaction_expires_447294_idx.py  0005_checkoutsession_session_id.py  0006_rename_interaction_interactionstatushistory_interaction.py
save-n-bite-backend/interactions/tests/: .coveragec  factories.py  test_accept_and_reject_donation.py  test_admin_views.py  tests.py  (+8 more)
save-n-bite-backend/notifications/: admin.py  models.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
save-n-bite-backend/reviews/: README.md  admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
save-n-bite-backend/scheduling/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
save-n-bite-backend/tests/: README.md  __init__.py  test_config.py  test_end_to_end.py  test_integration.py  test_integration_simple.py  test_nfr_simple.py  test_non_functional.py
save-n-bite-backend/transactions/: models.py  urls.py  views.py
(+385 files in other folders)
