[tool.poetry]
name = "save-n-bite"
version = "0.1.0"
description = "This serves as the backend services for the save n bite project. We will handle all server logic and services here."
authors = ["MarcoGeral <u23584565@tuks.co.za>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
django = "^5.2.1"
djangorestframework = "^3.16.0"
psycopg2-binary = "^2.9.10"
redis = "^6.1.0"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
python-dotenv = "^1.1.0"
dj-database-url = "^2.3.0"
djangorestframework-simplejwt = "^5.5.0"
django-cors-headers = "^4.7.0"
pillow = "^11.2.1"
qrcode = {extras = ["pil"], version = "^8.2"}

[tool.poetry.group.dev.dependencies]
# Add development dependencies here if needed

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"