[tool.poetry]
name = "save-n-bite"
version = "0.1.0"
description = "This serves as the backend services for the save n bite project. We will handle all server logic and services here."
authors = ["MarcoGeral <u23584565@tuks.co.za>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
django = "^5.2.1"
djangorestframework = "^3.16.0"
djangorestframework-simplejwt = "^5.5.0"
django-cors-headers = "^4.7.0"
psycopg2-binary = "^2.9.10"
redis = "^6.1.0"
django-redis = "^5.4.0"
celery = "^5.4.0"
pillow = "^11.2.1"
python-decouple = "^3.8"
python-dotenv = "^1.1.0"
dj-database-url = "^2.3.0"
qrcode = {extras = ["pil"], version = "^8.2"}
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.0"
pytest = "^8.4.1"
pytest-django = "^4.11.1"
pytest-cov = "^6.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-django = "^4.11.1"
pytest-cov = "^6.2.0"
pytest-html = "^4.1.0"
pytest-xdist = "^3.7.0"
pytest-mock = "^3.14.0"
pytest-clarity = "^1.0.0"
factory-boy = "^3.3.0"
faker = "^30.8.0"
black = "^24.8.0"
flake8 = "^7.1.0"
isort = "^5.13.0"
mypy = "^1.11.0"
django-stubs = "^5.1.0"
djangorestframework-stubs = "^3.15.0"
coverage = "^7.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "backend.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=.",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-config=.coveragerc"
]
testpaths = ["tests", "*/tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests as API tests",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_django = "django"
known_first_party = ["authentication", "food_listings", "interactions", "notifications", "scheduling", "reviews"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "backend.settings"

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/venv/*",
    "*/virtualenv/*",
    "manage.py",
    "*/settings/*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/static/*",
    "*/media/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

